Fix assert in PasteHelperJob::PasteHelperJob() when moving collections

BUG:340054